--- a/LaTex/ML.tex
+++ b/LaTex/ML.tex
@@ -1,121 +1,28 @@
-%% Based on a TeXnicCenter-Template by Tino Weinkauf.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\documentclass[a4paper,twoside,12pt]{report}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% HEADER
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[a4paper,twoside,10pt]{report}
-% Alternative Options:
-%	Paper Size: a4paper / a5paper / b5paper / letterpaper / legalpaper / executivepaper
-% Duplex: oneside / twoside
-% Base Font Size: 10pt / 11pt / 12pt
-
-
-%% Language %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage[USenglish]{babel} %francais, polish, spanish, ...
-\usepackage[T1]{fontenc}
-\usepackage[ansinew]{inputenc}
-
-\usepackage{lmodern} %Type1-font for non-english texts and characters
-
-
-%% Packages for Graphics & Figures %%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{graphicx} %%For loading graphic files
-%\usepackage{subfig} %%Subfigures inside a figure
-%\usepackage{pst-all} %%PSTricks - not useable with pdfLaTeX
-
-%% Please note:
-%% Images can be included using \includegraphics{Dateiname}
-%% resp. using the dialog in the Insert menu.
-%% 
-%% The mode "LaTeX => PDF" allows the following formats:
-%%   .jpg  .png  .pdf  .mps
-%% 
-%% The modes "LaTeX => DVI", "LaTeX => PS" und "LaTeX => PS => PDF"
-%% allow the following formats:
-%%   .eps  .ps  .bmp  .pict  .pntg
-
-
-%% Math Packages %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage[francais]{babel} 
+\usepackage{graphicx} 
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{amsfonts}
 
-
-%% Line Spacing %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\usepackage{setspace}
-%\singlespacing        %% 1-spacing (default)
-%\onehalfspacing       %% 1,5-spacing
-%\doublespacing        %% 2-spacing
-
-
-%% Other Packages %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\usepackage{a4wide} %%Smaller margins = more text per page.
-%\usepackage{fancyhdr} %%Fancy headings
-%\usepackage{longtable} %%For tables, that exceed one page
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Remarks
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% TODO:
-% 1. Edit the used packages and their options (see above).
-% 2. If you want, add a BibTeX-File to the project
-%    (e.g., 'literature.bib').
-% 3. Happy TeXing!
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Options / Modifications
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\input{options} %You need a file 'options.tex' for this
-%% ==> TeXnicCenter supplies some possible option files
-%% ==> with its templates (File | New from Template...).
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% DOCUMENT
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-\pagestyle{empty} %No headings for the first pages.
+\pagestyle{empty} 
 
 
-%% Title Page %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% ==> Write your text here or include other files.
+\title{Machine Learning Project For M2 EKAP}
+\author{Laurianne, Lucas}
+\date{01/10/2020}
 
-%% The simple version:
-\title{Title of this document}
-\author{Firstname Lastname}
-%\date{} %%If commented, the current date is used.
+\input{titlepage}
+
 \maketitle
 
-%% The nice version:
-%\input{titlepage} %%You need a file 'titlepage.tex' for this.
-%% ==> TeXnicCenter supplies a possible titlepage file
-%% ==> with its templates (File | New from Template...).
+\tableofcontents 
+\cleardoublepage 
 
-
-%% Inhaltsverzeichnis %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\tableofcontents %Table of contents
-\cleardoublepage %The first chapter should start on an odd page.
-
-\pagestyle{plain} %Now display headings: headings / fancy / ...
-
-
-
-%% Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% ==> Write your text here or include other files.
-
-%\input{intro} %You need a file 'intro.tex' for this.
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% ==> Some hints are following:
+\pagestyle{plain} 
 
 \chapter{Some small hints}\label{hints}
 
