--- a/LaTex/titlepage.tex
+++ b/LaTex/titlepage.tex
@@ -8,20 +8,14 @@
        \vspace*{1cm}
 
 			 \Large
-       \textbf{Volatility Modeling: \\ HAR \& GARCH Models}
-
-       \vspace{0.4cm}
-			 \large
-       A comparative study in forecasting accuracy
+       \textbf{Machine Learning project}
 
        \vfill
-			
-			 \includegraphics[width = 15cm, height = 7cm]{Figures/RandomWalk2}
 			
 			 \vspace{0.7cm}
 
 			 \normalsize
-       Aurouet Lucas
+       Aurouet Lucas Moriceau Laurianne
 			
 			\vspace{0.5cm}
         
