Preping LaTex File

--- a/LaTex/ML.tex
+++ b/LaTex/ML.tex
@@ -2,19 +2,18 @@
 
 \usepackage{graphicx} 
 \usepackage{amsmath}
+\usepackage{mathrsfs}
+\usepackage[latin1]{inputenc}
 
 \begin{document}
 
 \pagestyle{empty} 
-
 
 \title{Machine Learning Project For M2 EKAP}
 \author{Laurianne, Lucas}
 \date{01/10/2020}
 
 \input{titlepage}
-
-\maketitle
 
 \tableofcontents 
 \cleardoublepage 
@@ -24,7 +23,7 @@
 \chapter{Some small hints}\label{hints}
 
 \section{German Umlauts and other Language Specific Characters}\label{umlauts}
-You can type german umlauts like 'ä', 'ö', or 'ü' directly in this file.
+You can type german umlauts like  directly in this file.
 This is also true for other language specific characters like 'é', 'è' etc.
 
 There are problems with automatic hyphenation when using language
